更新了代码; 引入 vcpkg 包管理

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(BingWallpaperCpp main.cpp)
 
+if (${BING_WALLPAPER_CPP_USE_STATIC_LIBRARY_PRIOR})
+    set(CMAKE_FIND_LIBRARY_SUFFIXES .a ${CMAKE_FIND_LIBRARY_SUFFIXES})
+endif()
+
 
 message(STATUS "Finding cpr ...")
 find_library(LIB_CPR cpr REQUIRED)
@@ -30,3 +34,30 @@ target_link_libraries(BingWallpaperCpp PUBLIC ${LIB_SQLITE3})
 
 add_executable(log2sqlite log2sqlite.cpp)
 target_link_libraries(log2sqlite PUBLIC ${LIB_SQLITE3})
+
+
+if (${BING_WALLPAPER_CPP_USE_STATIC_LIBRARY_PRIOR})
+    set(CMAKE_FIND_LIBRARY_SUFFIXES .so ${CMAKE_FIND_LIBRARY_SUFFIXES})
+
+
+    message(STATUS "Finding curl ...")
+    find_library(LIB_CURL curl REQUIRED)
+    if (LIB_CURL)
+        message(STATUS "Found curl: ${LIB_CURL}")
+    else ()
+        message(FATAL_ERROR "curl not found")
+    endif ()
+    target_link_libraries(BingWallpaperCpp PUBLIC ${LIB_CURL})
+
+
+    message(STATUS "Finding ssl ...")
+    find_library(LIB_OPENSSL ssl REQUIRED)
+    if (LIB_OPENSSL)
+        message(STATUS "Found ssl: ${LIB_OPENSSL}")
+    else ()
+        message(FATAL_ERROR "ssl not found")
+    endif ()
+    target_link_libraries(BingWallpaperCpp PUBLIC ${LIB_OPENSSL})
+
+
+endif()
